fix shadow, spacing issues; remove profile head

--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,7 @@ section .container {
 }
 #about h4 {
   transition: all 800ms ease;
+  margin-bottom: 4%;
 }
 #about p {
   font-size: 1.5rem;
@@ -324,7 +325,7 @@ section .container {
 }
 .card {
   background-color: white;
-  box-shadow: 1px 10px 40px grey;
+  box-shadow: 1px 10px 40px rgba(0,0,0,.5);
   transition: all 300ms ease;
   margin: 15px;
 }
@@ -409,7 +410,7 @@ section .container {
 }
 .card:hover {
   transform: scale(1.1);
-  box-shadow: 6px 15px 20px grey;
+  box-shadow: 6px 15px 20px rgba(0,0,0,.5);
 }
 .card:hover .preview {
   opacity: .75;
